--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -35,6 +35,7 @@
 
 .modal_container {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 1.6rem;
 	flex-direction: column;
 	position: fixed;
@@ -43,7 +44,6 @@
 	width: 100%;
 	max-width: 30rem;
 	z-index: 1000;
-	max-height: 75vh;
 
 	.message_modal {
 		position: relative;
@@ -56,6 +56,7 @@
 		transition: all .3s ease;
 		border-radius: .8rem;
 		overflow: hidden;
+		min-height: 5.4rem;
 
 		&.info {
 			&::before {
