--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,8 @@ body.fixed {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	gap: 1.6rem;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
@@ -162,7 +164,6 @@ body.fixed {
 	width: 100%;
 	max-width: 30rem;
 	z-index: 1000;
-	max-height: 75vh;
 }
 .modal_container .message_modal {
 	position: relative;
@@ -177,6 +178,7 @@ body.fixed {
 	transition: all 0.3s ease;
 	border-radius: 0.8rem;
 	overflow: hidden;
+	min-height: 5.4rem;
 }
 .modal_container .message_modal.info::before {
 	background: #5061f7;
